<?xml version="1.0"?>
<package format="3">
  <name>mono16_converter</name>
  <version>0.0.0</version>
  <description>ROS2 node converting mono16 images to mono8</description>
  <maintainer email="your@email.com">Your Name</maintainer>
  <license>Apache License 2.0</license>

  <depend>rclpy</depend>
  <depend>cv_bridge</depend>
  <depend>sensor_msgs</depend>

  <test_depend>ament_cmake_pytest</test_depend>
  <test_depend>pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

